--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -1,16 +1,30 @@
-/* styles/Header.module.css */
 .header {
   background-color: #333;
   color: white;
   padding: 10px 20px;
   display: flex;
-  justify-content: space-between; /* Це вирівнює логотип і навігацію */
+  justify-content: space-between;
   align-items: center;
 }
 
 .logo {
   font-size: 24px;
   font-weight: bold;
+}
+
+.logoLink {
+  display: block;
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  transition: color 0.3s ease;
+}
+
+.logoLink:hover {
+  color: #1abc9c;
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
 .navList {
